Complete to the state it'll be submitted in